k8s/deployments/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: middleware
  name: middleware
  namespace: middleware
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: middleware
  sessionAffinity: None
  type: ClusterIP
