k8s/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: middleware
  namespace: middleware
spec:
  ingressClassName: nginx
  rules:
  - host: plivo-assignment.com
    http:
      paths:
      - backend:
          service:
            name: middleware
            port:
              number: 80
        path: /
        pathType: Prefix
